# ADOL-OP3-Lifting

adol_op3_lifting_manager/: CMakeLists.txt  package.xml
adol_op3_lifting_manager/config/: dxl_init_OP3.yaml  offset.yaml  offset_prob2.yaml
adol_op3_lifting_manager/data/: ini_pose.yaml
adol_op3_lifting_manager/launch/: op3_gazebo.launch  op3_manager.launch
adol_op3_lifting_manager/src/: adol_op3_manager.cpp
lifting_module/: CMakeLists.txt  package.xml
lifting_module/include/lifting_module/: lifting_module.h
lifting_module/src/: lifting_module.cpp
lifting_trajectory_loader/: CMakeLists.txt  package.xml
lifting_trajectory_loader/data/: 0.txt  015.txt  02.txt  060.txt  0615.txt  062.txt  1000.txt  120.txt  1215.txt  122.txt  1500.txt  1750.txt  2000.txt  750.txt  bsbprob1.txt  bsbprob1b.txt  bsbprob2.txt
lifting_trajectory_loader/src/: lifting_trajectory_loader.cpp
lifting_trajectory_msgs/: CMakeLists.txt  package.xml
lifting_trajectory_msgs/msg/: LiftingJointTrajectory.msg  LiftingTrajectory.msg
