<?xml version="1.0"?>
<package format="2">
  <name>lifting_module</name>
  <version>0.0.0</version>
  <description>The lifting_module package</description>
  
  <author email="hs3927@nyu.edu">Jay Song</author>
  <maintainer email="hs3927@nyu.edu">Jay sensor_msgs</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>boost</depend>
  <depend>eigen</depend>
  <depend>robotis_framework_common</depend>
  <depend>robotis_device</depend>
  <depend>robotis_math</depend>
  <depend>robotis_controller_msgs</depend>
  <depend>lifting_trajectory_msgs</depend>
</package>
