<?xml version="1.0"?>
<package format="2">
  <name>lifting_trajectory_loader</name>
  <version>0.0.0</version>
  <description>The lifting_trajectory_loader package</description>

  <author email="hs3927@nyu.edu">Jay Song</author>
  <maintainer email="hs3927@nyu.edu">Jay sensor_msgs</maintainer>
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>roslib</depend>
  <depend>std_msgs</depend>
  <depend>robotis_math</depend>
  <depend>lifting_trajectory_msgs</depend>
</package>
